[#44] Fix Date/Calendar stuff.